--- a/angular.json
+++ b/angular.json
@@ -19,7 +19,7 @@
             "polyfills": ["zone.js"],
             "tsConfig": "tsconfig.app.json",
             "assets": ["src/favicon.ico", "src/assets", "src/env.js"],
-            "styles": ["src/styles.css"],
+            "styles": [],
             "scripts": []
           },
           "configurations": {
